@@ -27,3 +27,4 @@
 ( cvs diff -u -r 1.2.2.8 -r 1.2.2.9 src/perl_gtk.c;  cvs diff -u -r 1.19.2.26 -r 1.19.2.27 src/perl_plugin.c;  ) > 0.9.11cvs1.patchset
 ( cvs diff -u -r 1.19.2.51 -r 1.19.2.52 configure.ac;  ) > 0.9.12cvs1.patchset
 ( cvs diff -u -r 1.2.2.9 -r 1.2.2.10 src/perl_gtk.c;  ) > 0.9.13cvs1.patchset
+( cvs diff -u -r 1.19.2.27 -r 1.19.2.28 src/perl_plugin.c;  ) > 0.9.13cvs2.patchset
