@@ -7,7 +7,7 @@ dnl plugin version
 MAJOR_VERSION=0
 MINOR_VERSION=9
 MICRO_VERSION=13
-EXTRA_VERSION=1
+EXTRA_VERSION=2
 
 CFLAGS="$CFLAGS -Wall"
 
