@@ -1,3 +1,8 @@
+2008-08-07 [colin]	0.9.13cvs2
+
+	* src/perl_plugin.c
+		Undeprecate
+
 2008-07-29 [colin]	0.9.13cvs1
 
 	* src/perl_gtk.c
